--- a/style.css
+++ b/style.css
@@ -13,10 +13,6 @@ body {
   color: black;
 }
 
-input, button {
-  border:none;
-  outline: none;
-}
 
 main {
   padding: 50px;
@@ -30,63 +26,19 @@ h1 {
   background-color: beige;
 }
 
-#input-original, #resultado {
-  background-color: black;
-  width: -webkit-fill-available;
-}
-
-#input-original {
-  margin: 10px 0 0;
-  padding: 15px;
+  #input-original {
+  margin: 15px 0 0;
+  padding: 10px;
   color: white;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
 
-#resultado {
-  height: 15px;
-  color: #5af78d;
-  padding: 0 3px 3px;
-  border-top-left-radius: 0px;
-  border-top-left-radius: 0px;
-}
-
-.rango {
-  margin-top: 10px;
-  display: grid;
-  grid-template-columns: 1 fr 30px;
-  text-align: center;
-  align-items: center;
-}
-
-input[type='range'] {
-  -webkit-appearance: none;
-  border-radius: 0px;
-  background: black;
-  margin: 0;
-  padding: 0 3px;
-  height: 15px;
-}
-
-input[type='range']::-webkit-slider-thumb {
-  cursor: pointer;
-  -webkit-appearance: none;
-  background: white;
-  border-radius: 100%;
-  height: 10px;
-  width: 10px;
-}
-
-  h3, button {
+  button {
+  text-decoration: none;
   padding: 10px;
   background: #a18262;
-  justify-content: center;
-  align-items: center;
   font-size: 1em
-}
-
-  button:hover {
-  background: black; ;
 }
 
 p {
@@ -100,3 +52,4 @@ p {
   left: 70%;
   top: 70%
 }
+
